--- a/conf/ocserv.conf
+++ b/conf/ocserv.conf
@@ -7,7 +7,7 @@
 
 # certificate:
 #  This indicates that all connecting users must present a certificate.
-auth = “plain[/etc/ocserv/ocpasswd]”
+auth = "plain[passwd=/etc/ocserv/ocpasswd]" 
 # pam[gid-min=1000]:
 #  This enabled PAM authentication of the user. The gid-min option is used 
 # by auto-select-group option, in order to select the minimum valid group ID.
@@ -36,7 +36,7 @@ auth = “plain[/etc/ocserv/ocpasswd]”
 # to have been issued within the provided number of seconds. That option is used to
 # restrict logins even if the KDC provides long time TGT tickets.
 
-auth = "pam"
+#auth = "pam"
 #auth = "pam[gid-min=1000]"
 #auth = "plain[passwd=./sample.passwd,otp=./sample.otp]"
 #auth = "certificate"
@@ -82,8 +82,8 @@ udp-port = 8585
 
 # The user the worker processes will be run as. It should be
 # unique (no other services run as this user).
-run-as-user = ocserv
-run-as-group = ocserv
+run-as-user = root
+run-as-group = root
 
 # socket file used for IPC with occtl. You only need to set that,
 # if you use more than a single servers.
@@ -404,15 +404,15 @@ device = vpns
 predictable-ips = true
 
 # The default domain to be advertised
-default-domain = example.com
+#default-domain = example.com
 
 # The pool of addresses that leases will be given from. If the leases
 # are given via Radius, or via the explicit-ip? per-user config option then 
 # these network values should contain a network with at least a single
 # address that will remain under the full control of ocserv (that is
 # to be able to assign the local part of the tun device address).
-#ipv4-network = 192.168.1.0
-#ipv4-netmask = 255.255.255.0
+ipv4-network = 192.168.1.0
+ipv4-netmask = 255.255.255.0
 
 # An alternative way of specifying the network:
 #ipv4-network = 192.168.1.0/24
@@ -585,7 +585,7 @@ dtls-legacy = true
 # Client profile xml. A sample file exists in doc/profile.xml.
 # It is required by some of the CISCO clients.
 # This file must be accessible from inside the worker's chroot. 
-user-profile = profile.xml
+#user-profile = profile.xml
 
 #Advanced options
 
